# micro-llm-project

./: .gitignore  README.md  micro_llm_tokenizer.pkl  pyproject.toml
data/: short_stories.txt
notebooks/: model_exploration.ipynb
src/: micro_llm.py  train_with_visualization.py  training_utils.py
training_logs/: training_history.json
visualizations/: index.html
